
28/09/2005	frmb	fixed up VAL abbreviation initialisation
25/09/2005	frmb	added compiler hook for alloc extra-vars, abbreviations maybe functional
24/09/2005	frmb	some work on abbreviations and value parameters
24/09/2005	frmb	first round of support for INITIAL declarations
18/09/2005	frmb	more work on the usage-checker
18/09/2005	frmb	various minor updates
17/09/2005	frmb	initial support for monadic operators (just "-" and "~" so far)
17/09/2005	frmb	kroc-etc target now tracks stack depths
16/09/2005	frmb	more support for dyadic operators (sorta work, ish :))
16/09/2005	frmb	improved result back-end node handling
15/09/2005	frmb	added back-end-map parse to the mapper
13/09/2005	frmb	added "result" node-type to back-end
12/09/2005	frmb	initial expression/dyadic handling
12/09/2005	frmb	experimentally added "_" as record-subscription in the parser
12/09/2005	frmb	various updates, added target info to _bytesfor() calls
11/09/2005	frmb	split occampi:namestart into occampi:namestartname
11/09/2005	frmb	initial support for RECORDSUBs
10/09/2005	frmb	split front-end data type stuff into occampi_dtype.c
09/09/2005	frmb	fixed some parser issues, now parses more complex data types
07/09/2005	frmb	initial support for DATA TYPEs
07/09/2005	frmb	initialiser hooks and chan-decl initialisation
06/09/2005	frmb	some support for built-in PROCs, got RESCHEDULE() working
05/09/2005	frmb	added pre-check parse
05/09/2005	frmb	started work on parallel usage checker
05/09/2005	frmb	some initial handling for channel direction specifiers
04/09/2005	frmb	more PAR support, some treeops, more coder-ops
03/09/2005	frmb	better PAR handling, added static-link things
14/08/2005	frmb	added PARSPACE nodes in back-end
10/08/2005	frmb	various udpates, better DFA generation
14/07/2005	frmb	tidied up DFA generation a bit, moved rules out into language bits
10/07/2005	frmb	more development, back-end code-gen looking vaguely happy
01/06/2005	frmb	checked into subversion repository