@@ -8,9 +8,9 @@ AUTOMAKE_OPTIONS=foreign
 
 INCLUDES=-I@srcdir@/../include
 
-libfrontend_a_SOURCES=occampi_lexer.c occampi_parser.c occampi_primproc.c occampi_cnode.c \
-		occampi_decl.c occampi_type.c occampi_action.c occampi_lit.c occampi_instance.c \
-		occampi_dtype.c occampi_oper.c occampi_initial.c
+libfrontend_a_SOURCES=occampi_fe.c occampi_lexer.c occampi_parser.c occampi_primproc.c occampi_cnode.c \
+		occampi_snode.c occampi_decl.c occampi_type.c occampi_action.c occampi_lit.c \
+		occampi_instance.c occampi_dtype.c occampi_oper.c occampi_initial.c
 
 
 CFLAGS=@CFLAGS@ @EXTRA_CFLAGS@
