@@ -10,5 +10,5 @@ noinst_HEADERS = version.h nocc.h support.h platform.h opts.h keywords.h \
 			treeops.h langops.h lexpriv.h scope.h parser.h parsepriv.h dfa.h prescope.h \
 			typecheck.h precheck.h aliascheck.h usagecheck.h defcheck.h map.h allocate.h \
 			target.h codegen.h krocetc.h transputer.h extn.h fetrans.h betrans.h \
-			feunit.h
+			feunit.h occampi_fe.h
 
