@@ -1,0 +1,27 @@
+/*
+ *	occampi_fe.h -- interface to occam-pi front-end
+ *	Copyright (C) 2005 Fred Barnes <frmb@kent.ac.uk>
+ *
+ *	This program is free software; you can redistribute it and/or modify
+ *	it under the terms of the GNU General Public License as published by
+ *	the Free Software Foundation; either version 2 of the License, or
+ *	(at your option) any later version.
+ *
+ *	This program is distributed in the hope that it will be useful,
+ *	but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *	GNU General Public License for more details.
+ *
+ *	You should have received a copy of the GNU General Public License
+ *	along with this program; if not, write to the Free Software
+ *	Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ */
+
+#ifndef __OCCAMPI_FE_H
+#define __OCCAMPI_FE_H
+
+extern int occampi_register_frontend (void);
+extern int occampi_unregister_frontend (void);
+
+#endif	/* !__OCCAMPI_FE_H */
+
